--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
 body {
-  background-color: #f3f2da;
+  background-color: #fcf8ec;
 }
