modify item page

--- a/public/css/item.css
+++ b/public/css/item.css
@@ -172,6 +172,7 @@ hr {
   font-family: 'Roboto', sans-serif;
   margin-right: 30px;
   margin-bottom: 10px;
+  font-weight: 900;
 }
 
 .end-of-comment {
