add display page

--- a/views/createItem.ejs
+++ b/views/createItem.ejs
@@ -57,9 +57,9 @@
       <textarea oninput="auto_grow(this)" class="form-control description-text" placeholder="Describe your item. The max length for one paragraph is 200 characters. You can add another paragraph." maxlength="200"></textarea>
       <button style="display:none" class="btn btn-outline-danger delete-para-btn" type="button"><i class="fas fa-trash-alt"></i></button>
     </div>
-    <button class="btn btn-outline-primary add-para-btn" type="button">Add new paragraph</button>
+    <button class="btn btn-outline-primary add-para-btn" type="button"><i class="fas fa-plus"></i> Add new paragraph</button>
     <div class="item-images">
-      <button class="btn btn-outline-primary add-img-btn" type="button">Add new image</button>
+      <button class="btn btn-outline-primary add-img-btn" type="button"><i class="fas fa-plus"></i> Add new image</button>
     </div>
     <p class="end-of-description">End of description</p>
   </div>
