--- a/views/display.ejs
+++ b/views/display.ejs
@@ -3,26 +3,81 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Main</title>
+  <title>Display</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/231fbd9d95.js" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/item.css">
+  <link rel="stylesheet" href="/css/display.css">
 </head>
 
 <body>
-  <h1>This is the main webpage.</h1>
-  <h2>Page: <%= page %> </h2>
+  <div class="header">
+
+  </div>
+
+  <div class="search-block">
+    <div class="input-group mb-3">
+      <input type="text" class="form-control search-input" placeholder="Search">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary search-btn" type="button">Search</button>
+      </div>
+    </div>
+  </div>
   <hr>
 
-  <% Items.forEach(function(item){ %>
-  <div>
-    <p>Item Name: <%= item.item_name %> </p>
-    <p>User Name: <%= item.user_name %> </p>
-    <p>Post Time: <%= item.post_time %> </p>
-    <p>Price: <%= item.price %> </p>
-    <img src="<%= item.img_url %>">
-    <p>num_visits: <%= item.num_visits %> </p>
-  </div>
-  <hr />
-  <% }) %>
+  <div class="display-cards">
+    <% items.forEach(function(item) { %>
+      <div class="item-card">
+        <label style="display:none"><%= item.item_id %></label>
+        <img src="<%= item.main_img_url %>" class="main-img" alt="">
+        <p class="item-title"><%= item.item_name %></p>
+        <p class="name-and-time"><%= item.user_name %> / <%= item.timestamp %></p>
+        <div class="item-status">
+          <p><%= item.status %></p>
+          <p><i class="far fa-eye"></i> <%= item.num_visits %></p>
+        </div>
+        <div class="item-price">
+          <p>$ <%= item.price %> </p>
+        </div>
+      </div>
+    <% }) %>
 
+  </div>
+  <div class="btn-block">
+    <% if (isFirstPage === 'True') { %>
+      <button id="prev-btn"  class="btn btn-outline-primary page-btn" type="button" disabled><i class="fas fa-arrow-left"></i> Prev</button>
+    <% } else { %>
+      <button id="prev-btn" class="btn btn-outline-primary page-btn" type="button"><i class="fas fa-arrow-left"></i> Prev</button>
+    <% } %>
+
+    <p id="page_num"><%= page %></p>
+    <% if (isLastPage === 'True') { %>
+      <button id="next-btn" class="btn btn-outline-primary page-btn" type="button" disabled>Next <i class="fas fa-arrow-right"></i></button>
+    <% } else { %>
+      <button id="next-btn" class="btn btn-outline-primary page-btn" type="button">Next <i class="fas fa-arrow-right"></i></button>
+    <% } %>
+
+  </div>
+
+
+
+
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/display.js"></script>
 </body>
 
 </html>
