--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -60,7 +60,7 @@
       </div>
     <% }) %>
 
-    <button class="btn btn-outline-primary add-para-btn" type="button">Add new paragraph</button>
+    <button class="btn btn-outline-primary add-para-btn" type="button"><i class="fas fa-plus"></i> Add new paragraph</button>
     <div class="item-images">
       <% item.img_urls.forEach(function(url) { %>
         <label class='img-container'>
@@ -69,7 +69,7 @@
             <button class='btn btn-outline-danger delete-img-btn' type='button'><i class='fas fa-trash-alt'></i></button>
         </label>
       <% }) %>
-      <button class="btn btn-outline-primary add-img-btn" type="button">Add new image</button>
+      <button class="btn btn-outline-primary add-img-btn" type="button"><i class="fas fa-plus"></i> Add new image</button>
     </div>
     <p class="end-of-description">End of description</p>
   </div>
