--- a/views/display.ejs
+++ b/views/display.ejs
@@ -27,9 +27,9 @@
 
   <div class="search-block">
     <div class="input-group mb-3">
-      <input type="text" class="form-control search-input" placeholder="Search">
+      <input type="text" class="form-control search-input" id="search-input" value="<%= keywords %>" placeholder="Search">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary search-btn" type="button">Search</button>
+        <button class="btn btn-outline-secondary search-btn" id="search-btn" type="button">Search</button>
       </div>
     </div>
   </div>
