--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,14 @@ body {
   background-color: #fcf8ec;
 }
 
+hr {
+  width: 1000px;
+  position: relative;
+  left: 50%;
+  margin-left: -500px;
+  margin-top:10px;
+}
+
 .error-block {
   width: 800px;
   position: relative;
@@ -30,4 +38,11 @@ body {
   font-family: 'Nerko One', cursive;
   color: #f85f73;
   margin: 30px;
+}
+
+.header {
+  height: 60px;
+  width: 100%;
+  background-color: #08d9d6;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
