--- a/views/createItem.ejs
+++ b/views/createItem.ejs
@@ -21,7 +21,9 @@
 
 <body>
   <div class="header">
-
+    <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 50px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 150px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
   </div>
 
   <div class="item-top">
@@ -42,7 +44,8 @@
           <div class="input-group-prepend">
             <span class="input-group-text item-price" style="border-top-left-radius:20px; border-bottom-left-radius:20px; background-color:#a8d8ea">$</span>
           </div>
-          <input pattern="[0-9]" onKeyDown="if((this.value.length>=4 && event.keyCode>47 && event.keyCode < 58) || (event.keyCode === 190) || (event.keyCode === 187)|| (event.keyCode === 189))return false;" type="number" min="0" max="9999" placeholder="0-9999"  class="form-control item-price item-price-input">
+          <input pattern="[0-9]" onKeyDown="if((this.value.length>=4 && event.keyCode>47 && event.keyCode < 58) || (event.keyCode === 190) || (event.keyCode === 187)|| (event.keyCode === 189))return false;" type="number" min="0" max="9999"
+            placeholder="0-9999" class="form-control item-price item-price-input">
         </div>
       </div>
 
