--- a/views/error.ejs
+++ b/views/error.ejs
@@ -21,7 +21,9 @@
 
 <body>
   <div class="header">
-
+    <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 50px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 150px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
   </div>
   <div class="error-block">
     <h1><i class="fas fa-exclamation-triangle"></i> ERROR</h1>
