--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -76,6 +76,7 @@
     </div>
     <p class="end-of-description">End of description</p>
   </div>
+  <button class="btn btn-outline-danger cancel-btn" onclick="history.back()"><i class="fas fa-ban"></i> Cancel</button>
   <button class="btn btn-outline-primary save-btn" type="submit"><i class="fas fa-cloud-upload-alt"></i> Submit</button>
 
   <div class="" style="height: 100px; width: 100%">
