--- a/views/user.ejs
+++ b/views/user.ejs
@@ -40,7 +40,7 @@
 
   <hr>
   <div class="item_count">
-    <p>You have 10 items on sale.</p>
+    <p>The user now has <%= num_items %> item(s) on sale.</p>
   </div>
 
   <div class="display-cards">
