--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -4,29 +4,33 @@
 <head>
   <meta charset="utf-8">
   <title>Project</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="stylesheet" href="/css/styles.css">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
   <div class="header">
     <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
   </div>
-
   <div class="Form-div">
-    <form class="" id="LogInForm" method="post" action="\log-in">
-      <button class="w-100 btn btn-primary" type="button" name="button" style="margin-top:20px;" onclick="window.location.href='/log-in'" id="LogInButton">Log In</button>
-      <button class="w-100 btn btn-primary" type="button" name="button" style="margin-top:20px;" onclick="window.location.href='/sign-up'" id="SignUpButton">Sign Up</button>
+    <form class="" id="ConfirmForm" method="post" action="\confirm">
+      <h1 class="h3 mb-3 fw-normal" style="text-align:center;">Please enter the verification code.</h1>
+      <label for="SignUpUserName" class="visually-hidden">User Name</label>
+      <input type="text" name="UserName" id="SignUpUserName" class="form-control" placeholder="User Name" value="<%= username %>">
+      <label for="SignUpEmail" class="visually-hidden">Email address</label>
+      <input type="email" name="UserEmail" id="SignUpEmail" class="form-control" placeholder="Email address" value="<%= email %>">
+      <label for="Code" class="visually-hidden">Code</label>
+      <input type="text" name="Code" id="Code" class="form-control" placeholder="Code">
+      <button class="w-100 btn btn-primary" type="submit" style="margin-top:20px;" id="CodeButton">Confirm</button>
     </form>
   </div>
 
 
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
