--- a/views/error.ejs
+++ b/views/error.ejs
@@ -28,7 +28,8 @@
   <div class="error-block">
     <h1><i class="fas fa-exclamation-triangle"></i> ERROR</h1>
     <h2><%= error_msg %></h2>
-    <a class="btn btn-outline-primary btn-lg" href="/" role="button">Home Page</a>
+    <a class="btn btn-outline-primary btn-lg" onclick="history.back()" role="button"><i class="fas fa-backward"></i> Back</a>
+    <a class="btn btn-outline-primary btn-lg" href="/" role="button"><i class="fas fa-home"></i> Home</a>
   </div>
 
 
