--- a/views/createItem.ejs
+++ b/views/createItem.ejs
@@ -22,8 +22,9 @@
 <body>
   <div class="header">
     <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
-    <a class="btn btn-outline-primary" style="position: absolute; right: 50px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
-    <a class="btn btn-outline-primary" style="position: absolute; right: 150px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 20px; margin-top: 10px;" href="/logout" role="button"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 130px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 230px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
   </div>
 
   <div class="item-top">
@@ -72,7 +73,9 @@
   <div class="" style="height: 100px; width: 100%">
 
   </div>
-
+  <footer>
+      <p>Copyright ⓒ 2020</p>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/create.js"></script>
   <script type="text/javascript">
