--- a/public/css/item.css
+++ b/public/css/item.css
@@ -53,6 +53,11 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.time-and-name:hover {
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
 .top-right-left {
   position: absolute;
   bottom: 70px;
