--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -54,3 +54,16 @@ hr {
   position: relative;
   margin-top: 150px;
 }
+
+footer {
+  height: 100px;
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+}
+
+footer p {
+  color: #ccc;
+}
