--- a/views/display.ejs
+++ b/views/display.ejs
@@ -23,8 +23,9 @@
 <body>
   <div class="header">
     <a class="btn btn-outline-primary" style="position: absolute; margin-top: 10px; left: 50px;" href="/" role="button"><i class="fas fa-home"></i> Home</a>
-    <a class="btn btn-outline-primary" style="position: absolute; right: 50px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
-    <a class="btn btn-outline-primary" style="position: absolute; right: 150px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 20px; margin-top: 10px;" href="/logout" role="button"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 130px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 230px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
   </div>
 
   <div class="search-block">
@@ -74,8 +75,12 @@
 
 
 
+  <div class="" style="height: 80px; width: 100%">
 
-
+  </div>
+  <footer>
+      <p>Copyright ⓒ 2020</p>
+  </footer>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
