--- a/views/chats.ejs
+++ b/views/chats.ejs
@@ -16,8 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/item.css">
-  <link rel="stylesheet" href="/css/display.css">
+  <link rel="stylesheet" href="/css/chats.css">
 </head>
 
 <body>
@@ -29,49 +28,19 @@
     <a class="btn btn-outline-primary" style="position: absolute; right: 330px; margin-top: 10px;" href="/chats" role="button"><i class="fas fa-comments"></i> Chats</a>
   </div>
 
-  <div class="search-block">
-    <div class="input-group mb-3">
-      <input type="text" class="form-control search-input" id="search-input" value="<%= keywords %>" placeholder="Search">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary search-btn" id="search-btn" type="button">Search</button>
+  <h1 class="chat-title">Your Chats</h1>
+  <div class="display-chat-block">
+    <% chats.forEach(function(chat) { %>
+      <div class="chat-block">
+        <p class="chat-id" style="display: none;"><%= chat.chat_id %></p>
+        <p class="chat-username"><%= chat.name %></p>
+        <p class="chat-content"><%= chat.last_content %></p>
       </div>
-    </div>
-  </div>
-  <hr>
-
-  <div class="display-cards">
-    <% items.forEach(function(item) { %>
-    <div class="item-card">
-      <label style="display:none"><%= item.item_id %></label>
-      <img src="<%= item.main_img_url %>" class="main-img" alt="">
-      <p class="item-title"><%= item.item_name %></p>
-      <p class="name-and-time"><%= item.user_name %> / <%= item.timestamp %></p>
-      <div class="item-status">
-        <p><%= item.status %></p>
-        <p><i class="far fa-eye"></i> <%= item.num_visits %></p>
-      </div>
-      <div class="item-price">
-        <p>$<%= item.price %> </p>
-      </div>
-    </div>
     <% }) %>
-
   </div>
-  <div class="btn-block">
-    <% if (isFirstPage === 'True') { %>
-    <button id="prev-btn" class="btn btn-outline-primary page-btn" type="button" disabled><i class="fas fa-arrow-left"></i> Prev</button>
-    <% } else { %>
-    <button id="prev-btn" class="btn btn-outline-primary page-btn" type="button"><i class="fas fa-arrow-left"></i> Prev</button>
-    <% } %>
 
-    <p id="page_num"><%= page %></p>
-    <% if (isLastPage === 'True') { %>
-    <button id="next-btn" class="btn btn-outline-primary page-btn" type="button" disabled>Next <i class="fas fa-arrow-right"></i></button>
-    <% } else { %>
-    <button id="next-btn" class="btn btn-outline-primary page-btn" type="button">Next <i class="fas fa-arrow-right"></i></button>
-    <% } %>
 
-  </div>
+
 
 
 
@@ -85,7 +54,7 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="/js/display.js"></script>
+  <script src="/js/chats.js"></script>
 </body>
 
 </html>
