--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -25,6 +25,7 @@
     <a class="btn btn-outline-primary" style="position: absolute; right: 20px; margin-top: 10px;" href="/logout" role="button"><i class="fas fa-sign-out-alt"></i> Log out</a>
     <a class="btn btn-outline-primary" style="position: absolute; right: 130px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
     <a class="btn btn-outline-primary" style="position: absolute; right: 230px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 330px; margin-top: 10px;" href="/chats" role="button"><i class="fas fa-comments"></i> Chats</a>
   </div>
 
   <div class="item-top">
