--- a/views/item.ejs
+++ b/views/item.ejs
@@ -25,6 +25,7 @@
     <a class="btn btn-outline-primary" style="position: absolute; right: 20px; margin-top: 10px;" href="/logout" role="button"><i class="fas fa-sign-out-alt"></i> Log out</a>
     <a class="btn btn-outline-primary" style="position: absolute; right: 130px; margin-top: 10px;" href="/create" role="button"><i class="fas fa-plus-circle"></i> Create</a>
     <a class="btn btn-outline-primary" style="position: absolute; right: 230px; margin-top: 10px;" href="/user" role="button"><i class="fas fa-user"></i> Profile</a>
+    <a class="btn btn-outline-primary" style="position: absolute; right: 330px; margin-top: 10px;" href="/chats" role="button"><i class="fas fa-comments"></i> Chats</a>
   </div>
 
   <div class="item-top">
@@ -47,7 +48,7 @@
         <% if (isOwner) { %>
         <a class="btn btn-outline-primary top-btn" id="edit-btn" href="#" role="button"><i class="fas fa-edit"></i> EDIT</a>
         <% } else { %>
-        <a class="btn btn-outline-primary top-btn" id="want-btn" href="#" role="button">WANT</a>
+        <a class="btn btn-outline-primary top-btn" id="want-btn" role="button">WANT</a>
         <% } %>
 
         <p>$<%= item.price %></p>
